Use Set.of instead of emptySet